--- a/blog-viewport-2.html
+++ b/blog-viewport-2.html
@@ -14,7 +14,7 @@
 <div id="wrapper">
     <nav>
         <ul>
-            <li><a href="index.html">Back</a></li>
+            <li><a href="/">Back</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Contact</a></li>
