--- a/form.html
+++ b/form.html
@@ -20,7 +20,7 @@
     <nav>
         <ul>
             <li>
-                <a href="index.html">&laquo; Back</a>
+                <a href="/">&laquo; Back</a>
             </li>
         </ul>
     </nav>
