--- a/geo.html
+++ b/geo.html
@@ -73,7 +73,7 @@
     <nav>
         <ul>
             <li>
-                <a href="index.html">&laquo; Back</a>
+                <a href="/">&laquo; Back</a>
             </li>
         </ul>
     </nav>
