Ejemplos responsive web design

--- a/index.html
+++ b/index.html
@@ -37,7 +37,20 @@
                 <a href="geo.html">Geolocalización</a>
             </li>
         </ul>
-       
+        <h2>Responsive web design</h2>
+        <ul>
+            <li><a href="font-size-rwd.html">Tipografías responsive</a></li>
+            <li>
+                Responsive blog
+                <a href="blog-fluid.html">(fluid layout)</a>
+                <a href="blog-rwd.html">(mobile + tablet)</a>
+                <a href="blog-rwd-all.html">(mobile + tablet + desktop)</a>
+            </li>
+            <li>
+                <a href="responsive-table.html">Responsive tables</a>
+            </li>
+            
+        </ul>
 
     </nav>
     <footer>
