--- a/index.html
+++ b/index.html
@@ -49,7 +49,13 @@
             <li>
                 <a href="responsive-table.html">Responsive tables</a>
             </li>
-            
+            <li>
+                Bootstrap blog
+                <a href="blog-clean.html">(base)</a>
+                <a href="blog-bootstrap-1.html">(scripts + stylesheets)</a>
+                <a href="blog-bootstrap-2.html">(clases)</a>
+                <a href="blog-bootstrap-3.html">(customización)</a>
+            </li>
         </ul>
 
     </nav>
