--- a/blog-bootstrap-2.html
+++ b/blog-bootstrap-2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <link href='http://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Blog - Web Mobile</title>
 
